--- a/CadastroAluno.html
+++ b/CadastroAluno.html
@@ -1,2 +1,3 @@
 <RA> 2218202233 </RA>
 <Nome Aluno> Matheus Queiroz Marques de Souza </Nome Aluno>
+<Data de Nascimento do aluno> 08-07-1999 </Data de Nascimento do aluno>
