--- a/CadastroAluno.html
+++ b/CadastroAluno.html
@@ -1,3 +1,4 @@
 <RA> 2218202233 </RA>
 <Nome Aluno> Matheus Queiroz Marques de Souza </Nome Aluno>
+<email do aluno> matheus-mq@uni9.edu.br </email do aluno>
 <Data de Nascimento do aluno> 08-07-1999 </Data de Nascimento do aluno>
